--- a/.eslintrc
+++ b/.eslintrc
@@ -1,10 +1,12 @@
 {
     "root": true,
     "plugins": [
-      "prettier"
+      "prettier",
+      "@typescript-eslint"
     ],
     "extends": [
       "eslint:recommended",
+      "plugin:@typescript-eslint/recommended",
       "prettier"
     ],
     "rules": {
@@ -14,10 +16,12 @@
       "prefer-const": "error"
     },
     "parserOptions": {
-      "ecmaVersion": 2017
+      "ecmaVersion": 2017,
+      "sourceType": "module"
     },
     "env": {
       "node": true,
       "es6": true
-    }
+    },
+    "parser": "@typescript-eslint/parser"
 }
